# robot-api-requests

./: .gitignore  README.md  log.html  model_suit.robot  output.xml  pyproject.toml  report.html
src/requests/: delete_faker_api copy.robot  get_faker_api.robot  post_faker_api copy.robot  post_faker_api.robot  put_faker_api.robot
